<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/inactivity_alert_tv"
            android:textSize="38px"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/inactivity_alert_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="28dp"
            android:background="@drawable/settings_btn_seletor"
            android:button="@null"
            android:checked="false" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_alert_interval"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:text="@string/inactivity_alert_interval_tv"
            android:textSize="38px"
            android:textStyle="bold" />



            <TextView
                android:id="@+id/inactivity_alert_interval_tv"
                android:layout_gravity="center_vertical"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="1h30mins"
                android:textSize="32px"
                android:layout_alignParentRight="true"
                android:paddingRight="20dp"
                android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_alert_start"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:paddingLeft="10dip"
            android:text="@string/inactivity_alert_start_tv"
            android:textSize="38px"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/inactivity_alert_start_tv"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="8:00 am"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:paddingRight="15dp"
                android:textSize="32px"
                android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_alert_end"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/inactivity_alert_end_tv"
            android:textSize="38px"
            android:textStyle="bold" />




            <TextView
                android:id="@+id/inactivity_alert_end_tv"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="8:00 pm"
                android:textSize="32px"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingRight="20dp"
                android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_alert_steps"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:clickable="true"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/inactivity_alert_steps_tv"
            android:textSize="38px"
            android:textStyle="bold" />



            <TextView
                android:id="@+id/inactivity_alert_steps_tv"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="100 Steps"
                android:textSize="32px"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:paddingRight="20dp"
                android:textStyle="bold" />

    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/inactivity_alert_frequency_tv"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:textSize="32px"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_su_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_su_tv"
                android:textOn="@string/inactivity_alert_su_tv"
                android:textSize="38px"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_m_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_m_tv"
                android:textOn="@string/inactivity_alert_m_tv"
                android:textSize="38px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_tu_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_tu_tv"
                android:textOn="@string/inactivity_alert_tu_tv"
                android:textSize="38px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_w_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_w_tv"
                android:textOn="@string/inactivity_alert_w_tv"
                android:gravity="center"
                android:textSize="38px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_th_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_th_tv"
                android:textOn="@string/inactivity_alert_th_tv"
                android:textSize="38px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_f_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_f_tv"
                android:textOn="@string/inactivity_alert_f_tv"
                android:textColor="@color/colorBlack"
                android:textSize="38px"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/inactivity_alert_sa_tb"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/alert_week_selector"
                android:textOff="@string/inactivity_alert_sa_tv"
                android:textOn="@string/inactivity_alert_sa_tv"
                android:textColor="@color/colorBlack"
                android:textSize="38px"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
